{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1402,
  "lineage": "88446a4f-6fb8-fd32-b2dd-dae56adcf0fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "asignacion-destinos-authentication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107-20230612155725517600000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107",
            "target_id": "i-058d6d0d62e451253"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.authentication-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107-2023061215572581070000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107",
            "target_id": "i-04b069db06979c5bc"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.authentication-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "asignacion-destinos-plots",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79-2023061215572591800000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79",
            "target_id": "i-058d6d0d62e451253"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.plots-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79-2023061215572587110000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79",
            "target_id": "i-04b069db06979c5bc"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.plots-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "asignacion-destinos-sensor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059-20230612155725593700000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059",
            "target_id": "i-058d6d0d62e451253"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.sensor-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059-20230612155725548200000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059",
            "target_id": "i-04b069db06979c5bc"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.sensor-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "asignacion-destinos-statistics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737-2023061215572611630000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737",
            "target_id": "i-058d6d0d62e451253"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.statistics-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737-2023061215572605420000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737",
            "target_id": "i-04b069db06979c5bc"
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_instance.ec2-ecs-tf",
            "aws_lb_target_group.statistics-target-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-eslastica-nat-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd34660a5797a689",
            "domain": "vpc",
            "id": "eipalloc-0dd34660a5797a689",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-203-123-24.compute-1.amazonaws.com",
            "public_ip": "52.203.123.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-eslastica-nat-tf"
            },
            "tags_all": {
              "Name": "ip-eslastica-nat-tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-bastion-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0715c1897453cabd1",
            "arn": "arn:aws:ec2:us-east-1:690031176274:instance/i-08c98efb946acba1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil-AmazonS3FullAccess-tf",
            "id": "i-08c98efb946acba1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clave_maquinas_TFG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08846f5ea71bef3ca",
            "private_dns": "ip-10-1-10-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.145",
            "public_dns": "ec2-54-208-163-45.compute-1.amazonaws.com",
            "public_ip": "54.208.163.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ec8899d77f800ca8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f91e2468446f16a",
            "tags": {
              "Name": "ec2-bastion-tf"
            },
            "tags_all": {
              "Name": "ec2-bastion-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0558130baae3ea2da"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.efs-tf",
            "aws_efs_mount_target.efs-mt",
            "aws_iam_instance_profile.perfil-AmazonS3FullAccess-tf",
            "aws_iam_role.AmazonS3FullAccess-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.efs-sg-tf",
            "aws_subnet.subred-databases-1a-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-ecs-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d9730eb75fb5301",
            "arn": "arn:aws:ec2:us-east-1:690031176274:instance/i-058d6d0d62e451253",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil-ecsInstanceRole-tf",
            "id": "i-058d6d0d62e451253",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clave_maquinas_TFG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b9c599c1369fcb2",
            "private_dns": "ip-10-1-10-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.93",
            "public_dns": "ec2-54-174-203-244.compute-1.amazonaws.com",
            "public_ip": "54.174.203.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08232f63507eac6f8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f91e2468446f16a",
            "tags": {
              "Name": "ec2-ecs-1-tf"
            },
            "tags_all": {
              "Name": "ec2-ecs-1-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe386af3c2b0d306"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d9730eb75fb5301",
            "arn": "arn:aws:ec2:us-east-1:690031176274:instance/i-04b069db06979c5bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil-ecsInstanceRole-tf",
            "id": "i-04b069db06979c5bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clave_maquinas_TFG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009334fb2ac3b8f70",
            "private_dns": "ip-10-1-10-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.72",
            "public_dns": "ec2-34-203-244-244.compute-1.amazonaws.com",
            "public_ip": "34.203.244.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b2bfff18bbb08de",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f91e2468446f16a",
            "tags": {
              "Name": "ec2-ecs-2-tf"
            },
            "tags_all": {
              "Name": "ec2-ecs-2-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe386af3c2b0d306"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.cluster-app-tf",
            "aws_iam_instance_profile.perfil-ecsInstanceRole-tf",
            "aws_iam_role.ecsInstanceRole-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.servicios-sg-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-front-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0715c1897453cabd1",
            "arn": "arn:aws:ec2:us-east-1:690031176274:instance/i-0d172183ef6c75d4b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil-AmazonS3FullAccess-tf",
            "id": "i-0d172183ef6c75d4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "clave_maquinas_TFG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09095519239b14eec",
            "private_dns": "ip-10-1-20-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.20.21",
            "public_dns": "ec2-3-95-61-240.compute-1.amazonaws.com",
            "public_ip": "3.95.61.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06863c6f68d7cef99",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e15c3d7d0e1fc11b",
            "tags": {
              "Name": "ec2-front-tf"
            },
            "tags_all": {
              "Name": "ec2-front-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0814e650b5272f5"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds-authentication-mysql-tf",
            "aws_db_instance.rds-sensor-postgres-tf",
            "aws_db_subnet_group.databases-grupo-subnet-tf",
            "aws_efs_file_system.efs-tf",
            "aws_efs_mount_target.efs-mt",
            "aws_iam_instance_profile.perfil-AmazonS3FullAccess-tf",
            "aws_iam_role.AmazonS3FullAccess-tf",
            "aws_instance.ec2-bastion-tf",
            "aws_instance.ec2-plots-mongo-tf",
            "aws_instance.ec2-statistics-cassandra-tf",
            "aws_lb.ALB-tf",
            "aws_s3_bucket.db-services-bucket-tf",
            "aws_s3_object.env_vars_fichero",
            "aws_security_group.alb-sg-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.databases-sg-tf",
            "aws_security_group.efs-sg-tf",
            "aws_security_group.front-sg-tf",
            "aws_subnet.subred-databases-1a-tf",
            "aws_subnet.subred-databases-1b-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-plots-mongo-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0715c1897453cabd1",
            "arn": "arn:aws:ec2:us-east-1:690031176274:instance/i-0d02ada9f8e90bfcf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil-AmazonS3FullAccess-tf",
            "id": "i-0d02ada9f8e90bfcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clave_maquinas_TFG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ef557fc28223a11",
            "private_dns": "ip-10-1-30-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.30.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a14bc815f0d557f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0621d0458d4b48d0f",
            "tags": {
              "Name": "ec2-plots-mongo-tf"
            },
            "tags_all": {
              "Name": "ec2-plots-mongo-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c477e771e92dcb2b"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.efs-tf",
            "aws_efs_mount_target.efs-mt",
            "aws_iam_instance_profile.perfil-AmazonS3FullAccess-tf",
            "aws_iam_role.AmazonS3FullAccess-tf",
            "aws_instance.ec2-bastion-tf",
            "aws_s3_bucket.db-services-bucket-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.databases-sg-tf",
            "aws_security_group.efs-sg-tf",
            "aws_subnet.subred-databases-1a-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-statistics-cassandra-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0715c1897453cabd1",
            "arn": "arn:aws:ec2:us-east-1:690031176274:instance/i-0675f75605bd9afd0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "perfil-AmazonS3FullAccess-tf",
            "id": "i-0675f75605bd9afd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "clave_maquinas_TFG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01bc429a930ebbbd6",
            "private_dns": "ip-10-1-30-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.30.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-066eb068ff51f0350",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0621d0458d4b48d0f",
            "tags": {
              "Name": "ec2-statistics-cassandra-tf"
            },
            "tags_all": {
              "Name": "ec2-statistics-cassandra-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c477e771e92dcb2b"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.efs-tf",
            "aws_efs_mount_target.efs-mt",
            "aws_iam_instance_profile.perfil-AmazonS3FullAccess-tf",
            "aws_iam_role.AmazonS3FullAccess-tf",
            "aws_instance.ec2-bastion-tf",
            "aws_s3_bucket.db-services-bucket-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.databases-sg-tf",
            "aws_security_group.efs-sg-tf",
            "aws_subnet.subred-databases-1a-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:internet-gateway/igw-03b5d6222b3b5029c",
            "id": "igw-03b5d6222b3b5029c",
            "owner_id": "690031176274",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "arn_suffix": "app/ALB-tf/626d7ae4914db17e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-tf-1281770203.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ab1f542d322038fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f91e2468446f16a"
              },
              {
                "subnet_id": "subnet-0e15c3d7d0e1fc11b"
              }
            ],
            "subnets": [
              "subnet-02f91e2468446f16a",
              "subnet-0e15c3d7d0e1fc11b"
            ],
            "tags": {
              "Name": "ALB-tf"
            },
            "tags_all": {
              "Name": "ALB-tf"
            },
            "vpc_id": "vpc-0ff8672d0ccc3cc11",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "authentication-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/9a4e1ccd66b69d08",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/9a4e1ccd66b69d08",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "port": 8999,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.authentication-target-tf",
            "aws_security_group.alb-sg-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/b81a6b4beee1a266",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/front-target-tf/50759a4e9bd84922",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/b81a6b4beee1a266",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "port": 4200,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.front-target-tf",
            "aws_security_group.alb-sg-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "plots-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/e0eb629a325adb91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/e0eb629a325adb91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.plots-target-tf",
            "aws_security_group.alb-sg-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sensor-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/e45e51df8aae5657",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/e45e51df8aae5657",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "port": 8081,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.sensor-target-tf",
            "aws_security_group.alb-sg-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "statistics-listener-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/af1c0aaa1774a7ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:listener/app/ALB-tf/626d7ae4914db17e/af1c0aaa1774a7ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:loadbalancer/app/ALB-tf/626d7ae4914db17e",
            "port": 8082,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.statistics-target-tf",
            "aws_security_group.alb-sg-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "authentication-target-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107",
            "arn_suffix": "targetgroup/authentication-target-tf/88f5c9597fb56107",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8999",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/authentication-target-tf/88f5c9597fb56107",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "authentication-target-tf",
            "port": 8999,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front-target-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/front-target-tf/50759a4e9bd84922",
            "arn_suffix": "targetgroup/front-target-tf/50759a4e9bd84922",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "4200",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/front-target-tf/50759a4e9bd84922",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-target-tf",
            "port": 4200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "plots-target-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79",
            "arn_suffix": "targetgroup/plots-target-tf/dbf2a4f022f66b79",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/plots-target-tf/dbf2a4f022f66b79",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "plots-target-tf",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sensor-target-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059",
            "arn_suffix": "targetgroup/sensor-target-tf/7ed046ae4e1b7059",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8081",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/sensor-target-tf/7ed046ae4e1b7059",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sensor-target-tf",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "statistics-target-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737",
            "arn_suffix": "targetgroup/statistics-target-tf/5cf5aeeee0406737",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8082",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/statistics-target-tf/5cf5aeeee0406737",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "statistics-target-tf",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "asignacion-destinos-front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/front-target-tf/50759a4e9bd84922-20230612160117739500000013",
            "port": 4200,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690031176274:targetgroup/front-target-tf/50759a4e9bd84922",
            "target_id": "i-0d172183ef6c75d4b"
          },
          "dependencies": [
            "aws_db_instance.rds-authentication-mysql-tf",
            "aws_db_instance.rds-sensor-postgres-tf",
            "aws_db_subnet_group.databases-grupo-subnet-tf",
            "aws_efs_file_system.efs-tf",
            "aws_efs_mount_target.efs-mt",
            "aws_iam_instance_profile.perfil-AmazonS3FullAccess-tf",
            "aws_iam_role.AmazonS3FullAccess-tf",
            "aws_instance.ec2-bastion-tf",
            "aws_instance.ec2-front-tf",
            "aws_instance.ec2-plots-mongo-tf",
            "aws_instance.ec2-statistics-cassandra-tf",
            "aws_lb.ALB-tf",
            "aws_lb_target_group.front-target-tf",
            "aws_s3_bucket.db-services-bucket-tf",
            "aws_s3_object.env_vars_fichero",
            "aws_security_group.alb-sg-tf",
            "aws_security_group.bastion-sg-tf",
            "aws_security_group.databases-sg-tf",
            "aws_security_group.efs-sg-tf",
            "aws_security_group.front-sg-tf",
            "aws_subnet.subred-databases-1a-tf",
            "aws_subnet.subred-databases-1b-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd34660a5797a689",
            "connectivity_type": "public",
            "id": "nat-033f1a92078b519a4",
            "network_interface_id": "eni-09a2f915aa1dc82b8",
            "private_ip": "10.1.20.46",
            "public_ip": "52.203.123.24",
            "subnet_id": "subnet-0e15c3d7d0e1fc11b",
            "tags": {
              "Name": "nat-gateway-tf"
            },
            "tags_all": {
              "Name": "nat-gateway-tf"
            }
          },
          "dependencies": [
            "aws_eip.ip-eslastica-nat-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla-rutas-databases-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:route-table/rtb-06dc8c0c5d4876686",
            "id": "rtb-06dc8c0c5d4876686",
            "owner_id": "690031176274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-033f1a92078b519a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tabla-rutas-databases-tf"
            },
            "tags_all": {
              "Name": "tabla-rutas-databases-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip-eslastica-nat-tf",
            "aws_nat_gateway.nat-gateway-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla-rutas-internet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:route-table/rtb-0113c3f196189f024",
            "id": "rtb-0113c3f196189f024",
            "owner_id": "690031176274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b5d6222b3b5029c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tabla-rutas-internet-tf"
            },
            "tags_all": {
              "Name": "tabla-rutas-internet-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tabla-databases-subred-databases-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02377f1aab0728e7a",
            "route_table_id": "rtb-06dc8c0c5d4876686",
            "subnet_id": "subnet-0621d0458d4b48d0f"
          },
          "dependencies": [
            "aws_eip.ip-eslastica-nat-tf",
            "aws_nat_gateway.nat-gateway-tf",
            "aws_route_table.tabla-rutas-databases-tf",
            "aws_subnet.subred-databases-1a-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tabla-databases-subred-databases-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a1cbf147bbf7f8",
            "route_table_id": "rtb-06dc8c0c5d4876686",
            "subnet_id": "subnet-030c492f2d77888ef"
          },
          "dependencies": [
            "aws_eip.ip-eslastica-nat-tf",
            "aws_nat_gateway.nat-gateway-tf",
            "aws_route_table.tabla-rutas-databases-tf",
            "aws_subnet.subred-databases-1b-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tabla-internet-subred-front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b05eb6fe48ee684d",
            "route_table_id": "rtb-0113c3f196189f024",
            "subnet_id": "subnet-0e15c3d7d0e1fc11b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.tabla-rutas-internet-tf",
            "aws_subnet.subred-front-1b-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tabla-internet-subred-servicios",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015a734893313ef93",
            "route_table_id": "rtb-0113c3f196189f024",
            "subnet_id": "subnet-02f91e2468446f16a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.tabla-rutas-internet-tf",
            "aws_subnet.subred-servicios-1a-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:security-group/sg-0ab1f542d322038fc",
            "description": "SG para el trafico hacia el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab1f542d322038fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8999
              }
            ],
            "name": "alb-sg-tf",
            "name_prefix": "",
            "owner_id": "690031176274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-tf"
            },
            "tags_all": {
              "Name": "alb-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:security-group/sg-0558130baae3ea2da",
            "description": "SG para el trafico hacia la EC2 Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0558130baae3ea2da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg-tf",
            "name_prefix": "",
            "owner_id": "690031176274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg-tf"
            },
            "tags_all": {
              "Name": "bastion-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databases-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:security-group/sg-0c477e771e92dcb2b",
            "description": "SG para el trafico hacia las bases de datos",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c477e771e92dcb2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cassandra",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9042
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0558130baae3ea2da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "databases-sg-tf",
            "name_prefix": "",
            "owner_id": "690031176274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "databases-sg-tf"
            },
            "tags_all": {
              "Name": "databases-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:security-group/sg-09e8f168584ee6c37",
            "description": "SG para el trafico hacia el EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e8f168584ee6c37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg-tf",
            "name_prefix": "",
            "owner_id": "690031176274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg-tf"
            },
            "tags_all": {
              "Name": "efs-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:security-group/sg-0a0814e650b5272f5",
            "description": "SG para el trafico hacia el front",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0814e650b5272f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0558130baae3ea2da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "front-sg-tf",
            "name_prefix": "",
            "owner_id": "690031176274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "front-sg-tf"
            },
            "tags_all": {
              "Name": "front-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "servicios-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:security-group/sg-0fe386af3c2b0d306",
            "description": "SG para el trafico hacia los servicios",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe386af3c2b0d306",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8999
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0558130baae3ea2da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "servicios-sg-tf",
            "name_prefix": "",
            "owner_id": "690031176274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "servicios-sg-tf"
            },
            "tags_all": {
              "Name": "servicios-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-databases-1a-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:subnet/subnet-0621d0458d4b48d0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0621d0458d4b48d0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690031176274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-databases-1a-tf"
            },
            "tags_all": {
              "Name": "subred-databases-1a-tf"
            },
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-databases-1b-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:subnet/subnet-030c492f2d77888ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030c492f2d77888ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690031176274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-databases-1b-tf"
            },
            "tags_all": {
              "Name": "subred-databases-1b-tf"
            },
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-front-1b-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:subnet/subnet-0e15c3d7d0e1fc11b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e15c3d7d0e1fc11b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690031176274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-front-1b-tf"
            },
            "tags_all": {
              "Name": "subred-front-1b-tf"
            },
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-servicios-1a-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:subnet/subnet-02f91e2468446f16a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f91e2468446f16a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690031176274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-servicios-1a-tf"
            },
            "tags_all": {
              "Name": "subred-servicios-1a-tf"
            },
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:vpc/vpc-0ff8672d0ccc3cc11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07ca115aa7bd1ee34",
            "default_route_table_id": "rtb-0856db645286f2702",
            "default_security_group_id": "sg-0aa3ee8d8290fd290",
            "dhcp_options_id": "dopt-004e64d0b5e69221a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff8672d0ccc3cc11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0856db645286f2702",
            "owner_id": "690031176274",
            "tags": {
              "Name": "vpc-tf"
            },
            "tags_all": {
              "Name": "vpc-tf"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-endpoint-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690031176274:vpc-endpoint/vpce-0c508a40fea604763",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0c508a40fea604763",
            "owner_id": "690031176274",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint-tf"
            },
            "tags_all": {
              "Name": "s3-endpoint-tf"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ff8672d0ccc3cc11"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    }
  ]
}